--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,11 +98,11 @@ input, select, textarea {
 		}
 
 	body, input, textarea, select {
-		font-family: 'Source Sans Pro';
+		font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 		font-weight: 300;
 		color: #777;
 		line-height: 1.65em;
-		font-size: 15pt;
+		font-size: 16pt;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
