--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -159,7 +159,7 @@ input, select, textarea {
 
 	strong, b {
 		font-weight: 600;
-		color: #141414;
+		color: #666;
 	}
 
 	em, i {
@@ -2282,6 +2282,7 @@ input, select, textarea {
 
 			#header h1 {
 				font-size: 2.5em;
+				line-height: 1.525em;
 			}
 
 		/* Nav */
