--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1921,6 +1921,7 @@ input, select, textarea {
 			text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.1);
 			font-size: 3em;
 			letter-spacing: 13px;
+			line-height: 1.525em;
 		}
 
 			#header h1 a {
@@ -2715,6 +2716,10 @@ input, select, textarea {
 
 	#header h1.wtf {
 		color: #2A9D8F;
+	}
+
+	#header h1.wtf .subtext {
+		font-size: 0.5em
 	}
 
 	#header h1.wtf .acronym {
